src/components/GamePage/GamePage.css
.game-page{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000;
    background: black;
    width: 80vw;
    height: 730px;
    padding: 0 25px;
}

#game-page-nav {
  display: flex;  
  justify-content: space-between;
  align-items: center;
  height: 85px;
}

#game-page-nav > .game-title{
    font-family: 'Inter', 'sans-serif';
    font-size: 24px;
}

#game-page-exit-button{
    display: flex;
    background-color: var(--light-purple);
    font-size: 20px;
    height: 30px;
    width: 30px;
    align-items: center;
    justify-content: center;
}

#game-page-main {
    display: grid;
    width: 100%;
    grid-template-columns: 3fr 2fr;
    gap: 20px;
    
    
}
/****game-page-left ****/

#game-page-image-left {
    width: 100%;
    margin-bottom: 25px;
}

.screenshots {
    display: flex;
    gap: 10px;
}
.screenshot {
    width: 100%;
    height: 80px;
}

/****game-page-right ****/

#game-page-right {
    overflow: hidden;
}
#game-page-image-right {
    width: 100%;
}

#game-info {
    font-family: 'Inter', 'sans-serif';
    font-size: 12px;
    font-weight: 100;
}

.game-info-list {
    display: grid;
    grid-template-columns: 2fr 5fr;
}

.game-info-list > ul {
    display: grid;
    grid-template-columns: repeat(5, fit-content(40%));
    margin-bottom: 10px;
}

#game-overview > .description {
    line-height: 110%;
    margin-bottom: 10px;
}

#game-info .highlight {
    color: var(--light-purple);
}

.released, .rating{
    display: grid;
    grid-template-columns: 2fr 5fr;
    margin-bottom: 10px;
}

#game-platforms {
    line-height: 120%;
}

